# yci107-eda

./: .gitignore  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml
notebooks/: eda.ipynb  preprocessing fine tune.ipynb  test.ipynb
resources/: dataset_train_comments_v1.1.csv  dataset_train_comments_v1.2.csv  dataset_train_comments_v1.csv  tweet_comments_part1.csv  tweet_comments_part_2.csv  tweet_comments_part_3.csv
