[project]
name = "yci107-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.14.1",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "textattack>=0.3.10",
    "uvicorn>=0.35.0",
]
